--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
 body {
-  font-family: Arial, sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
