--- a/frontend/src/app/components/todo-list/todo-list.component.html
+++ b/frontend/src/app/components/todo-list/todo-list.component.html
@@ -1,15 +1,23 @@
-<div class="todo-input">
-  <input
-    [(ngModel)]="newTodoTitle"
-    (keyup.enter)="addTodo()"
-    placeholder="Add a new todo"
-    class="todo-input-field"
-  >
-  <button (click)="addTodo()" class="add-button">Add</button>
+
+<div class="wrapper">
+  <div class="todo-input">
+    <mat-form-field appearance="outline" class="todo-input-field">
+      <mat-label>Add a new todo</mat-label>
+      <input matInput [(ngModel)]="newTodoTitle" (keyup.enter)="addTodo()" placeholder="Add a new todo">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="todo-date-field">
+      <mat-label>Due Date</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="newTodoDueDate" (ngModelChange)="cdr.markForCheck()">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="addTodo()">Add</button>
+  </div>
+
+  <app-todos-filter [todos]="todos" (filteredTodos)="onFilteredTodos($event)"></app-todos-filter>
+
+  <mat-list class="todo-list">
+    <app-todo-item *ngFor="let todo of filteredTodos" [todo]="todo" (update)="updateTodo($event)" (delete)="deleteTodo($event)"></app-todo-item>
+  </mat-list>
 </div>
 
-<ul class="todo-list">
-  <li *ngFor="let todo of todos" class="todo-item">
-    <app-todo-item [todo]="todo" (update)="updateTodo($event)" (delete)="deleteTodo($event)"></app-todo-item>
-  </li>
-</ul>
