--- a/frontend/src/app/components/todo-list/todo-list.component.scss
+++ b/frontend/src/app/components/todo-list/todo-list.component.scss
@@ -1,36 +1,58 @@
-.todo-input {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
-}
+@import "../../../theme";
 
-.todo-input-field {
-  flex: 1;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
 
-.add-button {
-  padding: 10px 20px;
-  background-color: #28a745;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.wrapper{
 
-  &:hover {
-    background-color: #218838;
+
+  background-color: $background;
+  .mat-mdc-card.mdc-card{
+    margin-bottom: 1rem;
   }
+  .mat-mdc-card.mdc-card:not(:last-child){
+    margin-bottom: 1rem;
+  }
+  // .todo-list-wrapper{
+  //   padding: 2rem;
+  //   //background-color: $background-component;
+  // }
+
+  .todo-input {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .todo-input-field {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  .add-button {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #218838;
+    }
+  }
+
+  .todo-list {
+    list-style: none;
+    padding: 0;
+  }
+
+  .todo-item {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+  }
+
+
 }
 
-.todo-list {
-  list-style: none;
-  padding: 0;
-}
-
-.todo-item {
-  padding: 10px;
-  border-bottom: 1px solid #eee;
-}
