--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,8 @@
+@import "../src/theme";
 html, body { height: 100%; }
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
-  padding: 0;
-  background-color: #f9f9f9;
+
+
 }
